# Algo-Trading

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dashboard/: package-lock.json  package.json
dashboard/src/: middleware.ts
dashboard/src/app/: globals.css  layout.tsx
dashboard/src/app/(app)/: layout.tsx
dashboard/src/app/(app)/backtests/: page.tsx
dashboard/src/app/(app)/dashboard/: page.tsx
dashboard/src/app/(app)/experiments/: page.tsx
dashboard/src/app/(app)/markets/: page.tsx
dashboard/src/app/(app)/operations/: page.tsx
dashboard/src/app/(app)/option-chain/: page.tsx
dashboard/src/app/(app)/paper-trading/: page.tsx
dashboard/src/app/(app)/research/: page.tsx
dashboard/src/app/(app)/scalp/: page.tsx
dashboard/src/app/(app)/settings/: page.tsx
dashboard/src/app/login/: page.tsx
dashboard/src/components/: command-palette.tsx  providers.tsx  theme-toggle.tsx
dashboard/src/components/charts/: entry-funnel.tsx  equity-chart.tsx  sparkline.tsx  time-series-chart.tsx
dashboard/src/components/feedback/: states.tsx
dashboard/src/components/layout/: page-header.tsx  sidebar.tsx  topbar.tsx
dashboard/src/components/market/: ticker-tape.tsx  tv-widget.tsx
dashboard/src/components/status/: stat-card.tsx  status-pill.tsx
dashboard/src/components/tables/: data-table.tsx
dashboard/src/lib/: auth.ts  format.ts  nav.ts
dashboard/src/lib/api/: client.ts  mocks.ts  queries.ts  types.ts
dashboard/src/stores/: ui.ts
docs/: burn-in-plan.md  gfdl-import-runbook.md  runbook.md
docs/data/: bhav_import.md  bhav_mapping.json  events.csv  gfdl_mapping.json
docs/decisions/: 0001-phase1-architecture.md  0002-paper-lab.md
docs/pine/: breakout_screener.pine  scalper_toolkit.pine
docs/research/: breakout-screen-findings.md  dashboards.md  event-pipeline.md  meanrev-screen.md  momentum-screen.md  vrp-experiment-001-eod.md  vrp-experiment-001.md  vrp-pipeline.md  vrp-study-findings.md
infrastructure/alertmanager/: alertmanager.yml
infrastructure/backup/: backup.sh  restore_drill.sh
infrastructure/caddy/: Caddyfile
infrastructure/clickhouse/: init.sql
infrastructure/docker/: Dockerfile
infrastructure/grafana/provisioning/datasources/: datasources.yml
infrastructure/loki/: config.yml  promtail.yml
infrastructure/prometheus/: alerts.yml  prometheus.yml
libs/backtest/: pyproject.toml
libs/backtest/src/tp_backtest/: __init__.py  costs.py  dataset.py  engine.py  experiment.py  fills.py  metrics.py  montecarlo.py  orchestrate.py  positions.py  validation.py  walkforward.py
libs/backtest/src/tp_backtest/strategies/: vrp.py
libs/core/: pyproject.toml
libs/core/src/tp_core/: __init__.py  config.py  timeutils.py
libs/core/src/tp_core/db/: __init__.py  engine.py  orm.py  repos.py
libs/core/src/tp_core/models/: __init__.py  enums.py  instruments.py  market.py  trading.py
libs/core/src/tp_core/redis/: __init__.py  bus.py  channels.py  events.py
libs/core/src/tp_core/strategy/: __init__.py  base.py  risk.py
libs/core/src/tp_core/telemetry/: __init__.py  health.py  logging.py  metrics.py
libs/research/: pyproject.toml
libs/research/src/tp_research/: __init__.py  burnin.py  chain.py  estimators.py
libs/research/src/tp_research/bhav/: __init__.py  importer.py  parse.py  report.py
libs/research/src/tp_research/equity/: __init__.py  adjust.py  bhav.py  importer.py
libs/research/src/tp_research/features/: context.py  engine.py  registry.py
libs/research/src/tp_research/gfdl/: __init__.py  bsm.py  importer.py  parse.py  report.py
libs/research/src/tp_research/options/: __init__.py  digest.py  live.py  vrp.py
libs/research/src/tp_research/scalp/: __init__.py  review.py  signals.py
libs/research/src/tp_research/screener/: __init__.py  alerts.py  backtest.py  indicators.py  meanrev.py  models.py  momentum.py  signals.py
libs/research/src/tp_research/validation/: checks.py  runner.py
libs/upstox/: pyproject.toml
libs/upstox/src/tp_upstox/: __init__.py  auth.py  feed.py  rest.py
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_import_files.py  0003_instrument_natural_key_not_unique.py  0004_equity_bars.py  0005_scalp_signals.py
scripts/: backfill_features.py  bhav_import.py  breakout_backtest.py  burnin_check.py  equity_bhav_import.py  gfdl_import.py  meanrev_backtest.py  momentum_backtest.py  run_vrp_experiment.py  run_vrp_experiment_eod.py  seed_events.py  seed_instruments.py  vrp_study.py
services/api/: pyproject.toml
services/api/src/tp_api/: deps.py  main.py
services/api/src/tp_api/routers/: auth.py  console.py  system.py  trading.py
services/paper/: pyproject.toml
services/paper/src/tp_paper/: engine.py  main.py  signals.py
services/recorder/: pyproject.toml
services/recorder/src/tp_recorder/: batch_writer.py  chain_poller.py  main.py  subscriptions.py  validators.py
services/scheduler/: pyproject.toml
services/scheduler/src/tp_scheduler/: context.py  main.py
services/scheduler/src/tp_scheduler/jobs/: breakout_scan.py  data_validation.py  dq_sweep.py  feature_engine.py  heartbeat.py  instruments_refresh.py  nse_eod.py  options_digest.py  options_live.py  paper_review.py  scalp_review.py  scalp_scan.py  token_check.py  vol_metrics.py
services/telegram/: pyproject.toml
services/telegram/src/tp_telegram/: alert_router.py  commands.py  main.py
tests/integration/: test_db_roundtrip.py
tests/unit/: test_adjust.py  test_alerts.py  test_backtest_engine.py  test_bhav.py  test_chain_analytics.py  test_console_helpers.py  test_costs_fills.py  test_equity_bhav.py  test_estimators.py  test_feed_parsing.py  test_gfdl.py  test_meanrev.py  test_momentum.py  test_options_digest.py  test_options_live.py  test_orchestrate.py  test_rate_limiter.py  test_scalp.py  test_scalp_review.py  test_screener.py  test_synthetic_spread.py  test_timeutils.py  test_validators.py  test_vrp.py  test_vrp_eod_window.py  test_walkforward_mc_gate.py
(+6 files in other folders)
