[project]
name = "trading-platform"
version = "0.1.0"
description = "Quant research and trading platform for Indian index options (NIFTY/SENSEX)"
requires-python = ">=3.12"
dependencies = [
    "tp-core",
    "tp-upstox",
    "tp-research",
    "tp-backtest",
    "tp-recorder",
    "tp-paper",
    "tp-scheduler",
    "tp-api",
    "tp-telegram",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["libs/*", "services/*"]

[tool.uv.sources]
tp-core = { workspace = true }
tp-upstox = { workspace = true }
tp-research = { workspace = true }
tp-backtest = { workspace = true }
tp-recorder = { workspace = true }
tp-paper = { workspace = true }
tp-scheduler = { workspace = true }
tp-api = { workspace = true }
tp-telegram = { workspace = true }

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pre-commit>=4.0",
    "alembic>=1.14",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["libs/core/src", "libs/upstox/src", "services/*/src"]

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "N", "UP", "B", "A", "C4", "DTZ", "T20",
    "SIM", "PTH", "RUF", "ASYNC", "S",
]
ignore = [
    "S101",   # assert is fine in this codebase (pydantic + tests)
    "S608",   # SQL built from trusted enum/identifier constants only
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "DTZ"]
"migrations/**" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "libs/core/src:libs/upstox/src:libs/research/src:libs/backtest/src:services/recorder/src:services/paper/src:services/scheduler/src:services/api/src:services/telegram/src"
exclude = ["notebooks/", "datalake/"]

[[tool.mypy.overrides]]
module = ["upstox_client.*", "apscheduler.*", "aiogram.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "libs", "services"]
markers = [
    "integration: requires running postgres/redis (deselect with '-m \"not integration\"')",
    "live_creds: requires real Upstox credentials; never run in CI",
]
addopts = "-m 'not integration and not live_creds' -q"

[tool.coverage.run]
source = ["libs", "services"]
