[project]
name = "tp-core"
version = "0.1.0"
description = "Shared kernel: config, domain models, db, redis, telemetry"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "redis>=5.2",
    "structlog>=24.4",
    "prometheus-client>=0.21",
    "starlette>=0.41",
    "uvicorn>=0.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tp_core"]
