[project]
name = "tp-research"
version = "0.1.0"
description = "Research layer: data validation framework, estimators, feature engine"
requires-python = ">=3.12"
dependencies = [
    "tp-core",
    "numpy>=2.0",
]

[tool.uv.sources]
tp-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tp_research"]
