[project]
name = "tp-upstox"
version = "0.1.0"
description = "Upstox broker adapter: auth, REST, market data feed"
requires-python = ">=3.12"
dependencies = [
    "tp-core",
    "httpx>=0.27",
    "upstox-python-sdk>=2.14",
]

[tool.uv.sources]
tp-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tp_upstox"]
