[project]
name = "tp-paper"
version = "0.1.0"
description = "Paper trading lab: forward-test execution on live recorded snapshots"
requires-python = ">=3.12"
dependencies = ["tp-core", "tp-research", "tp-backtest"]

[tool.uv.sources]
tp-core = { workspace = true }
tp-research = { workspace = true }
tp-backtest = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tp_paper"]

[project.scripts]
tp-paper = "tp_paper.main:cli"
