[project]
name = "tp-recorder"
version = "0.1.0"
description = "Market data recorder: websocket hot set + REST chain polling"
requires-python = ">=3.12"
dependencies = ["tp-core", "tp-upstox"]

[tool.uv.sources]
tp-core = { workspace = true }
tp-upstox = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tp_recorder"]

[project.scripts]
tp-recorder = "tp_recorder.main:cli"
