[project]
name = "tp-scheduler"
version = "0.1.0"
description = "Batch jobs: token check, EOD ingestion, vol metrics, DQ, heartbeats"
requires-python = ">=3.12"
dependencies = [
    "tp-core",
    "tp-upstox",
    "apscheduler>=3.10,<4",
    "httpx>=0.27",
]

[tool.uv.sources]
tp-core = { workspace = true }
tp-upstox = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tp_scheduler"]

[project.scripts]
tp-scheduler = "tp_scheduler.main:cli"
