[project]
name = "tp-telegram"
version = "0.1.0"
description = "Telegram mission control: alerts out, read-only commands in"
requires-python = ">=3.12"
dependencies = [
    "tp-core",
    "aiogram>=3.15",
    "httpx>=0.27",
]

[tool.uv.sources]
tp-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tp_telegram"]

[project.scripts]
tp-telegram = "tp_telegram.main:cli"
